# pySDF

./: README.md  pyproject.toml  tutorials.ipynb
src/pySDF/: __init__.py  phonons.py  spinPhonon.py  spins.py
tests/: test_phonons.py  test_spins.py
