[project]
name = "pySDF"
version = "0.0.1"
authors = [
  { name="Nikhil Kotibhaskar", email="nikotibhaskar@gmail.com" },
]
description = "a package for simulating ion spin systems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nik2111/pySDF"
Issues = "https://github.com/nik2111/pySDF"
